tdf#117491 Base crash when editing text in SQL query editor

regression from
    commit 148b84160667ed3ec74c8767f6e62567479488f9
    loplugin:useuniqueptr in TETextPortionList

Change-Id: I464a56c26876a9153278d2f99931ca4e3cc3e01f